<resources>
    <string name="app_name">WorkoutTimer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_workouts">Workouts</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_userprofiles">User Profiles</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="userprofile">User profile</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="userprofileimage">User profile image</string>
    <string name="image">Image</string>
    <string name="communicate">Communicate</string>
    <string name="workout">Workout</string>
    <string name="three_vertical_dots">⋮</string>
    <string name="start_workout">Start workout</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="prepare">Prepare</string>
    <string name="prepare_duration">Prepare duration</string>
    <string name="work_duration">Work duration</string>
    <string name="hint_total_remaining_duration">01:35</string>
    <string name="work">Work</string>
    <string name="work_description">Work description</string>
    <string name="workout_description">Workout description</string>
    <string name="rest">Rest</string>
    <string name="rest_description">Rest description</string>
    <string name="rest_duration">Rest duration</string>
    <string name="cycles_count">Cycles count</string>
    <string name="sets_count">Sets count</string>
    <string name="rest_between_sets">Rest between sets</string>
    <string name="rest_between_sets_duration">Rest between sets duration</string>
    <string name="cool_down">Cool down</string>
    <string name="cool_down_duration">Cool down duration</string>
    <string name="edit_workout">Edit workout</string>
    <string name="message_no_userprofiles_are_defined">No user profiles are defined yet. Add one to begin with!</string>
    <string name="message_no_workouts_are_defined">No workouts are defined yet. Add one to begin with!</string>
    <string name="message_pick_a_color">Choose a color</string>
    <string name="select">Select</string>
    <string name="sequences">Sequences</string>
    <string name="message_home_fragment_workouts">You have %d workouts</string>
    <string name="message_home_fragment_sequences">You have %d sequences</string>
    <string name="message_home_fragment_no_workouts">You have no workouts yet. Add a new workout</string>
    <string name="message_home_fragment_no_sequences">You have no sequences yet. Add a new sequence</string>
    <string name="message_home_fragment_welcome">Welcome %s</string>
    <string name="message_workout_training_fragment_cycle_index">%1$d / %2$d</string>
    <string name="hint_workout_training_fragment_cycle_index">1 / 5</string>
    <string name="message_workout_training_fragment_set_index">%1$d / %2$d</string>
    <string name="hint_workout_training_fragment_set_index">1 / 2</string>
    <string name="hint_duration">90</string>
    <string name="hint_item_type">Work</string>
    <string name="lock">Lock</string>
    <string name="pause_workout">Pause workout</string>
    <string name="previous_workout_item">Previous workout item</string>
    <string name="next_workout_item">Next workout item</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="message_workout_training_fragment_duration">+ %d</string>
    <string name="message_workout_training_fragment_remaining_duration">- %d</string>

</resources>
