<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vbarjovanu.workouttimer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_workouts"
            app:destination="@id/nav_workouts"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_nav_home_to_nav_userprofiles"
            app:destination="@id/nav_userprofiles"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_enter_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_workouts"
        android:name="com.vbarjovanu.workouttimer.ui.workouts.list.WorkoutsFragment"
        android:label="@string/menu_workouts"
        tools:layout="@layout/fragment_workouts" >
        <action
            android:id="@+id/action_nav_workouts_to_nav_workout_edit"
            app:destination="@id/nav_workout_edit"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.vbarjovanu.workouttimer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_userprofiles"
        android:name="com.vbarjovanu.workouttimer.ui.userprofiles.list.UserProfilesFragment"
        android:label="@string/menu_userprofiles"
        tools:layout="@layout/fragment_userprofiles" >
        <action
            android:id="@+id/action_nav_userprofiles_to_nav_userprofile_edit"
            app:destination="@id/nav_userprofile_edit"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_share"
        android:name="com.vbarjovanu.workouttimer.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.vbarjovanu.workouttimer.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <action
        android:id="@+id/action_global_nav_home"
        app:destination="@id/nav_home"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim" />
    <fragment
        android:id="@+id/nav_userprofile_edit"
        android:name="com.vbarjovanu.workouttimer.ui.userprofiles.edit.UserProfileEditFragment"
        tools:layout="@layout/fragment_userprofile_edit" >
        <action
            android:id="@+id/action_nav_userprofile_edit_to_nav_userprofiles"
            app:destination="@id/nav_userprofiles"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/nav_userprofiles" />
    </fragment>
    <fragment
        android:id="@+id/nav_workout_edit"
        android:name="com.vbarjovanu.workouttimer.ui.workouts.edit.WorkoutEditFragment"
        android:label="@string/edit_workout"
        tools:layout="@layout/fragment_workout_edit">
        <action
            android:id="@+id/action_nav_workout_edit_to_nav_workouts"
            app:destination="@id/nav_workouts"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
</navigation>